--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "ValhallaCoinMarketplace": {
+    "AngularStartingProject": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -20,7 +20,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/ValhallaCoinMarketplace",
+            "outputPath": "dist/AngularStartingProject",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -70,18 +70,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ValhallaCoinMarketplace:build"
+            "browserTarget": "AngularStartingProject:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "ValhallaCoinMarketplace:build:production"
+              "browserTarget": "AngularStartingProject:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ValhallaCoinMarketplace:build"
+            "browserTarget": "AngularStartingProject:build"
           }
         },
         "test": {
@@ -119,16 +119,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "ValhallaCoinMarketplace:serve"
+            "devServerTarget": "AngularStartingProject:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "ValhallaCoinMarketplace:serve:production"
+              "devServerTarget": "AngularStartingProject:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "ValhallaCoinMarketplace"
+  "defaultProject": "AngularStartingProject"
 }
